--- a/packages/js/plugins/ethereum/web3api.plugin.yaml
+++ b/packages/js/plugins/ethereum/web3api.plugin.yaml
@@ -1,5 +1,5 @@
 format: 0.0.1-prealpha.3
 language: plugin/typescript
 name: Ethereum
-main: ./src/index.ts
+module: ./src/index.ts
 schema: ./src/schema.graphql
