--- a/packages/js/plugins/http/web3api.plugin.yaml
+++ b/packages/js/plugins/http/web3api.plugin.yaml
@@ -1,7 +1,5 @@
-format: 0.0.1-prealpha.2
+format: 0.0.1-prealpha.3
 language: plugin/typescript
 name: Http
-modules:
-  query:
-    schema: ./src/query/schema.graphql
-    module: ./src/query/index.ts
+module: ./src/index.ts
+schema: ./src/schema.graphql
