--- a/packages/js/plugins/logger/web3api.plugin.yaml
+++ b/packages/js/plugins/logger/web3api.plugin.yaml
@@ -1,10 +1,8 @@
-format: 0.0.1-prealpha.2
+format: 0.0.1-prealpha.3
 name: Logger
 language: plugin/typescript
-modules:
-  query:
-    schema: ./src/query/schema.graphql
-    module: ./src/query/index.ts
+module: ./src/index.ts
+schema: ./src/schema.graphql
 import_redirects:
   - uri: "ens/logger.core.web3api.eth"
     schema: ../../../core-interfaces/logger/src/query.graphql
