--- a/packages/js/plugins/ethereum/src/__tests__/integration/web3api.yaml
+++ b/packages/js/plugins/ethereum/src/__tests__/integration/web3api.yaml
@@ -1,11 +1,7 @@
-format: 0.0.1-prealpha.8
+format: 0.0.1-prealpha.9
 name: EthereumIntegration
 build: ./web3api.build.yaml
 language: wasm/assemblyscript
-modules:
-  query:
-    schema: ./src/query/schema.graphql
-    module: ./src/query/index.ts
-  mutation:
-    schema: ./src/mutation/schema.graphql
-    module: ./src/mutation/index.ts
+module: ./src/index.ts
+schema: ./src/schema.graphql
+
