--- a/packages/js/plugins/http/package.json
+++ b/packages/js/plugins/http/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
     "codegen": "node ../../../../dependencies/node_modules/@web3api/cli/bin/w3 plugin codegen",
+    "codegen:patch": "node ../../../cli/bin/w3 plugin codegen",
     "lint": "eslint --color -c ../../../../.eslintrc.js src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
