--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "clean": "npx rimraf ./**/node_modules ./**/yarn.lock ./**/build ./**/coverage ./**/.w3",
     "dependencies:install": "cd dependencies && yarn",
     "preinstall": "yarn dependencies:install",
-    "build": "yarn build:core && yarn build:plugins && yarn build:client && yarn build:cli && build:plugins:patch",
+    "build": "yarn build:core && yarn build:plugins && yarn build:client && yarn build:cli && yarn build:plugins:patch",
     "build:core": "lerna run build --no-private --ignore @web3api/*-plugin-js --ignore @web3api/cli* --ignore @web3api/react",
     "build:plugins": "lerna run build --scope @web3api/*-plugin-js --concurrency 1",
     "build:client": "lerna run build --scope @web3api/client-js --scope @web3api/react",
