--- a/packages/js/core/src/__tests__/manifest/web3api/wrong-type/web3api.yaml
+++ b/packages/js/core/src/__tests__/manifest/web3api/wrong-type/web3api.yaml
@@ -1,5 +1,5 @@
 format: 0.0.1-prealpha.9
 name: "Wrong Type"
 language: wasm/assemblyscript
-main: 2345235235235
+module: 2345235235235
 schema: ../schema.graphql
