--- a/packages/core-interfaces/filesystem/package.json
+++ b/packages/core-interfaces/filesystem/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint --color -c ../../../.eslintrc.js .",
     "test:env:up": "npx w3 test-env up",
     "test:env:down": "npx w3 test-env down",
-    "deploy": "npx w3 build --ipfs http://localhost:5001"
+    "deploy": "npx w3 deploy"
   },
   "devDependencies": {
     "@web3api/client-js": "0.0.1-prealpha.84",
