--- a/packages/js/plugins/http/src/__tests__/e2e/integration/web3api.yaml
+++ b/packages/js/plugins/http/src/__tests__/e2e/integration/web3api.yaml
@@ -1,7 +1,6 @@
-format: 0.0.1-prealpha.5
+format: 0.0.1-prealpha.9
+name: HTTP-Integration
 build: ./web3api.build.yaml
 language: wasm/assemblyscript
-modules:
-  query:
-    schema: ./src/query/schema.graphql
-    module: ./src/query/index.ts
+schema: ./schema.graphql
+module: ./src/index.ts
