--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,15 @@ yarn-error.log
 coverage
 .vscode
 *.log
-w3
-.w3
+polywrap
+.polywrap
 .DS_Store
 report.*
 target
 **/*.rs.bk
 Cargo.lock
 bin
+!packages/cli/bin
 pkg
 wasm-pack.log
 .env
