--- a/packages/core-interfaces/logger/package.json
+++ b/packages/core-interfaces/logger/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "version": "0.0.1-prealpha.85",
   "scripts": {
-    "build": "npx w3 build",
+    "build": "npx polywrap build",
     "lint": "eslint --color -c ../../../.eslintrc.js .",
-    "test:env:up": "npx w3 infra up --modules=eth-ens-ipfs",
-    "test:env:down": "npx w3 infra down --modules=eth-ens-ipfs",
-    "deploy": "npx w3 build --ipfs http://localhost:5001"
+    "test:env:up": "npx polywrap infra up --modules=eth-ens-ipfs",
+    "test:env:down": "npx polywrap infra down --modules=eth-ens-ipfs",
+    "deploy": "npx polywrap build --ipfs http://localhost:5001"
   },
   "devDependencies": {
     "polywrap": "0.0.1-prealpha.85"
