--- a/packages/js/plugins/ethereum/package.json
+++ b/packages/js/plugins/ethereum/package.json
@@ -13,8 +13,8 @@
   ],
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
-    "codegen": "node ../../../../dependencies/node_modules/polywrap/bin/w3 plugin codegen",
-    "codegen:patch": "node ../../../cli/bin/w3 plugin codegen && rimraf ./src/w3",
+    "codegen": "node ../../../../dependencies/node_modules/polywrap/bin/polywrap plugin codegen",
+    "codegen:patch": "node ../../../cli/bin/polywrap plugin codegen && rimraf ./src/polywrap",
     "lint": "eslint --color -c ../../../../.eslintrc.js src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --detectOpenHandles --verbose",
