--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "preinstall": "yarn dependencies:install",
     "build": "yarn build:core && yarn build:plugins && yarn build:client && yarn build:test-env && yarn build:cli && yarn build:plugins:patch",
     "build:core": "lerna run build --no-private --ignore @web3api/*-plugin-js --ignore @web3api/cli* --ignore @web3api/react --ignore @web3api/test-env-js",
-    "build:plugins": "lerna run build --scope @web3api/*-plugin-js --concurrency 1",
+    "build:plugins": "lerna run build --scope @web3api/*-plugin-js --ignore @web3api/ipfs-resolver-plugin-js --concurrency 1",
     "build:client": "lerna run build --scope @web3api/client-js --scope @web3api/react",
     "build:test-env": "lerna run build --scope @web3api/test-env-js",
     "build:cli": "lerna run build --scope @web3api/cli",
-    "build:plugins:patch": "lerna run codegen:patch --scope @web3api/*-plugin-js --concurrency 1",
+    "build:plugins:patch": "lerna run codegen:patch --scope @web3api/*-plugin-js --ignore @web3api/ipfs-resolver-plugin-js --concurrency 1",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint -- --fix",
     "lint:ci": "yarn lint",
