--- a/packages/js/plugins/ipfs/web3api.plugin.yaml
+++ b/packages/js/plugins/ipfs/web3api.plugin.yaml
@@ -4,5 +4,5 @@ language: plugin/typescript
 module: ./src/index.ts
 schema: ./src/schema.graphql
 import_redirects:
-  - uri: "ens/uri-resolver.core.web3api.eth"
-    schema: ../../../core-interfaces/uri-resolver/src/query.graphql
+  - uri: "ens/ipfs.web3api.eth"
+    schema: ../../../core-interfaces/ipfs/build/schema.graphql
