--- a/packages/js/plugins/uri-resolvers/ipfs-resolver/package.json
+++ b/packages/js/plugins/uri-resolvers/ipfs-resolver/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@web3api/ipfs-resolver-plugin-js",
-  "description": "Web3API IPFS Javascript Plugin",
-  "version": "0.0.1-prealpha.85",
+  "name": "@polywrap/ipfs-resolver-plugin-js",
+  "description": "Polywrap IPFS Javascript Plugin",
+  "version": "0.0.1-prealpha.86",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "build": "rimraf ./build && tsc --project tsconfig.build.json",
-    "codegen": "node ../../../../../dependencies/node_modules/@web3api/cli/bin/w3 plugin codegen",
+    "codegen": "npx polywrap plugin codegen",
     "codegen:patch": "node ../../../../cli/bin/w3 plugin codegen",
     "lint": "eslint --color -c ../../../../.eslintrc.js src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@dorgjelli-test/ipfs-http-client-lite": "0.3.1",
-    "@web3api/core-js": "0.0.1-prealpha.85",
+    "@polywrap/core-js": "0.0.1-prealpha.85",
     "abort-controller": "3.0.0",
     "cids": "^1.1.4",
     "is-ipfs": "1.0.3"
