Fix build issues introduced by new interface

--- a/packages/js/plugins/uri-resolvers/ipfs-resolver/package.json
+++ b/packages/js/plugins/uri-resolvers/ipfs-resolver/package.json
@@ -12,9 +12,9 @@
     "build"
   ],
   "scripts": {
-    "build": "rimraf ./build && tsc --project tsconfig.build.json",
-    "codegen": "npx polywrap plugin codegen",
-    "codegen:patch": "node ../../../../cli/bin/w3 plugin codegen",
+    "build": "rimraf ./build && yarn codegen && tsc --project tsconfig.build.json",
+    "codegen": "node ../../../../../dependencies/node_modules/polywrap/bin/polywrap plugin codegen",
+    "codegen:patch": "node ../../../../cli/bin/polywrap plugin codegen && rimraf ./src/wrap",
     "lint": "eslint --color -c ../../../../.eslintrc.js src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@dorgjelli-test/ipfs-http-client-lite": "0.3.1",
-    "@polywrap/core-js": "0.0.1-prealpha.85",
+    "@polywrap/core-js": "0.0.1-prealpha.86",
     "abort-controller": "3.0.0",
     "cids": "^1.1.4",
     "is-ipfs": "1.0.3"
