--- a/packages/core-interfaces/ipfs/package.json
+++ b/packages/core-interfaces/ipfs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "version": "0.0.1-prealpha.86",
   "scripts": {
-    "build": "npx polywrap build",
+    "build": "node ../../../dependencies/node_modules/polywrap/bin/polywrap build",
     "lint": "eslint --color -c ../../../.eslintrc.js .",
     "test:env:up": "npx polywrap infra up --modules=eth-ens-ipfs",
     "test:env:down": "npx polywrap infra down --modules=eth-ens-ipfs",
