--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "reset": "yarn clean && yarn && yarn build",
     "clean": "npx rimraf ./**/node_modules ./**/yarn.lock ./**/build ./**/coverage ./**/.polywrap",
     "dependencies:install": "cd dependencies && yarn",
-    "build": "yarn build:core && yarn build:plugins && yarn build:client && yarn build:test-env && yarn build:cli && yarn build:plugins:patch",
+    "preinstall": "yarn dependencies:install",
+    "build": "yarn build:core && yarn build:plugins && yarn build:client && yarn build:test-env && yarn build:cli",
     "build:core": "lerna run build --no-private --ignore @polywrap/*-plugin-js --ignore polywrap --ignore @polywrap/client-js --ignore @polywrap/react --ignore @polywrap/test-env-js",
     "build:plugins": "lerna run build --scope @polywrap/*-plugin-js --concurrency 1",
     "build:client": "lerna run build --scope @polywrap/client-js --scope @polywrap/react",
     "build:test-env": "lerna run build --scope @polywrap/test-env-js",
     "build:cli": "lerna run build --scope polywrap",
-    "build:plugins:patch": "lerna run codegen:patch --scope @polywrap/*-plugin-js --concurrency 1",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint -- --fix",
     "lint:ci": "yarn lint",
