--- a/packages/js/plugins/uri-resolvers/ipfs-resolver/package.json
+++ b/packages/js/plugins/uri-resolvers/ipfs-resolver/package.json
@@ -15,7 +15,7 @@
     "build": "rimraf ./build && yarn codegen && tsc --project tsconfig.build.json",
     "codegen": "node ../../../../../dependencies/node_modules/polywrap/bin/polywrap plugin codegen",
     "codegen:patch": "node ../../../../cli/bin/polywrap plugin codegen && rimraf ./src/wrap",
-    "lint": "eslint --color -c ../../../../.eslintrc.js src/",
+    "lint": "eslint --color -c ../../../../../.eslintrc.js src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
     "test:watch": "jest --watch --passWithNoTests --verbose"
