--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dependencies:install": "cd dependencies && yarn",
     "build": "yarn build:core && yarn build:interfaces && yarn build:plugins && yarn build:client && yarn build:test-env && yarn build:cli && yarn build:plugins:patch",
     "build:core": "lerna run build --no-private --ignore @polywrap/*-plugin-js --ignore polywrap --ignore @polywrap/client-js --ignore @polywrap/react --ignore @polywrap/test-env-js",
-    "build:interfaces": "lerna run build --scope @webapi3/*-interface --concurrency 1",
+    "build:interfaces": "lerna run build --scope @polywrap/*-interface --concurrency 1",
     "build:plugins": "lerna run build --scope @polywrap/*-plugin-js --concurrency 1",
     "build:client": "lerna run build --scope @polywrap/client-js --scope @polywrap/react",
     "build:test-env": "lerna run build --scope @polywrap/test-env-js",
