--- a/packages/js/plugins/filesystem/polywrap.plugin.yaml
+++ b/packages/js/plugins/filesystem/polywrap.plugin.yaml
@@ -4,5 +4,5 @@ name: Filesystem
 module: ./src/index.ts
 schema: ./src/schema.graphql
 import_redirects:
-  - uri: "ens/uri-resolver.core.polywrap.eth"
-    schema: ../../../core-interfaces/uri-resolver/src/query.graphql
+  - uri: "ens/fs.polywrap.eth"
+    schema: ../../../core-interfaces/filesystem/build/schema.graphql
