--- a/packages/js/plugins/uri-resolvers/filesystem-resolver/package.json
+++ b/packages/js/plugins/uri-resolvers/filesystem-resolver/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@web3api/fs-resolver-plugin-js",
+  "name": "@polywrap/fs-resolver-plugin-js",
   "description": "Web3API File System URI Resolver Javascript Plugin",
-  "version": "0.0.1-prealpha.85",
+  "version": "0.0.1-prealpha.86",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -13,20 +13,19 @@
   ],
   "scripts": {
     "build": "rimraf ./build && yarn codegen && tsc --project tsconfig.build.json",
-    "codegen": "node ../../../../../dependencies/node_modules/@web3api/cli/bin/w3 plugin codegen",
+    "codegen": "node ../../../../../dependencies/node_modules/polywrap/bin/polywrap plugin codegen",
     "lint": "eslint --color -c ../../../../../.eslintrc.js src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
     "test:ci": "jest --passWithNoTests --runInBand --verbose",
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
-    "@web3api/core-js": "0.0.1-prealpha.85"
+    "@polywrap/core-js": "0.0.1-prealpha.86"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
     "@types/prettier": "2.6.0",
-    "@web3api/cli": "0.0.1-prealpha.85",
-    "@web3api/client-js": "0.0.1-prealpha.85",
+    "polywrap": "0.0.1-prealpha.86",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
     "ts-jest": "26.5.4",
