--- a/packages/js/plugins/uri-resolvers/filesystem-resolver/polywrap.plugin.yaml
+++ b/packages/js/plugins/uri-resolvers/filesystem-resolver/polywrap.plugin.yaml
@@ -1,12 +1,10 @@
-format: 0.0.1-prealpha.2
+format: 0.0.1-prealpha.3
 name: FilesystemResolver
 language: plugin/typescript
-modules:
-  query:
-    schema: ./src/query/schema.graphql
-    module: ./src/query/index.ts
+module: ./src/index.ts
+schema: ./src/schema.graphql
 import_redirects:
-  - uri: "ens/uri-resolver.core.web3api.eth"
+  - uri: "ens/uri-resolver.core.polywrap.eth"
     schema: ../../../../core-interfaces/uri-resolver/src/query.graphql
-  - uri: "ens/fs.web3api.eth"
+  - uri: "ens/fs.polywrap.eth"
     schema: ../../../../core-interfaces/filesystem/build/schema.graphql
