--- a/packages/core-interfaces/ipfs/polywrap.yaml
+++ b/packages/core-interfaces/ipfs/polywrap.yaml
@@ -1,5 +1,5 @@
 format: 0.0.1-prealpha.9
-name: Filesystem
+name: IPFS
 language: interface
 deploy: ./polywrap.deploy.yaml
 schema: ./src/schema.graphql
