--- a/packages/js/plugins/ipfs/package.json
+++ b/packages/js/plugins/ipfs/package.json
@@ -16,7 +16,7 @@
     "codegen": "node ../../../../dependencies/node_modules/polywrap/bin/polywrap plugin codegen",
     "lint": "eslint --color -c ../../../../.eslintrc.js src/",
     "test": "jest --passWithNoTests --runInBand --verbose",
-    "test:ci": "yarn codegen && yarn test",
+    "test:ci": "jest --passWithNoTests --runInBand --verbose",
     "test:watch": "jest --watch --passWithNoTests --verbose"
   },
   "dependencies": {
