--- a/packages/js/plugins/file-system/polywrap.plugin.yaml
+++ b/packages/js/plugins/file-system/polywrap.plugin.yaml
@@ -1,8 +1,8 @@
 format: 0.0.1-prealpha.3
 language: plugin/typescript
-name: Filesystem
+name: FileSystem
 module: ./src/index.ts
 schema: ./src/schema.graphql
 import_redirects:
   - uri: "ens/fs.polywrap.eth"
-    schema: ../../../core-interfaces/filesystem/build/schema.graphql
+    schema: ../../../core-interfaces/file-system/build/schema.graphql
