--- a/packages/js/plugins/uri-resolvers/file-system-resolver/polywrap.plugin.yaml
+++ b/packages/js/plugins/uri-resolvers/file-system-resolver/polywrap.plugin.yaml
@@ -1,5 +1,5 @@
 format: 0.0.1-prealpha.3
-name: FilesystemResolver
+name: FileSystemResolver
 language: plugin/typescript
 module: ./src/index.ts
 schema: ./src/schema.graphql
@@ -7,4 +7,4 @@ import_redirects:
   - uri: "ens/uri-resolver.core.polywrap.eth"
     schema: ../../../../core-interfaces/uri-resolver/src/query.graphql
   - uri: "ens/fs.polywrap.eth"
-    schema: ../../../../core-interfaces/filesystem/build/schema.graphql
+    schema: ../../../../core-interfaces/file-system/build/schema.graphql
