--- a/packages/js/plugins/ipfs/package.json
+++ b/packages/js/plugins/ipfs/package.json
@@ -23,8 +23,8 @@
     "@dorgjelli-test/ipfs-http-client-lite": "0.3.1",
     "@polywrap/core-js": "0.0.1-prealpha.88",
     "abort-controller": "3.0.0",
-    "cids": "^1.1.4",
-    "is-ipfs": "1.0.3"
+    "is-ipfs": "1.0.3",
+    "multiformats": "9.7.0"
   },
   "devDependencies": {
     "@types/jest": "26.0.8",
