--- a/packages/js/plugins/uri-resolvers/ipfs-resolver/package.json
+++ b/packages/js/plugins/uri-resolvers/ipfs-resolver/package.json
@@ -24,7 +24,6 @@
     "@dorgjelli-test/ipfs-http-client-lite": "0.3.1",
     "@polywrap/core-js": "0.0.1-prealpha.88",
     "abort-controller": "3.0.0",
-    "cids": "^1.1.4",
     "is-ipfs": "1.0.3"
   },
   "devDependencies": {
@@ -35,7 +34,8 @@
     "rimraf": "3.0.2",
     "ts-jest": "26.5.4",
     "ts-node": "8.10.2",
-    "typescript": "4.0.7"
+    "typescript": "4.0.7",
+    "multiformats": "9.7.0"
   },
   "gitHead": "7346adaf5adb7e6bbb70d9247583e995650d390a",
   "publishConfig": {
