--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -35,7 +35,7 @@
     "@types/react": "16.9.0",
     "@types/react-dom": "16.9.0",
     "jest": "26.6.3",
-    "jest-environment-jsdom": "^26.0.1",
+    "jest-environment-jsdom": "26.0.1",
     "polywrap": "0.0.1-prealpha.88",
     "rimraf": "3.0.2",
     "typescript": "4.0.7"
