--- a/packages/js/client/package.json
+++ b/packages/js/client/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@polywrap/asyncify-js": "0.0.1-prealpha.88",
     "@polywrap/core-js": "0.0.1-prealpha.88",
-    "@polywrap/ens-plugin-js": "0.0.1-prealpha.88",
+    "@polywrap/ens-resolver-plugin-js": "0.0.1-prealpha.88",
     "@polywrap/ethereum-plugin-js": "0.0.1-prealpha.88",
     "@polywrap/fs-plugin-js": "0.0.1-prealpha.88",
     "@polywrap/graph-node-plugin-js": "0.0.1-prealpha.88",
