--- a/packages/js/plugins/filesystem/package.json
+++ b/packages/js/plugins/filesystem/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@polywrap/client-js": "0.0.1-prealpha.88",
-    "@polywrap/ens-plugin-js": "0.0.1-prealpha.88",
+    "@polywrap/ens-resolver-plugin-js": "0.0.1-prealpha.88",
     "@polywrap/ethereum-plugin-js": "0.0.1-prealpha.88",
     "@polywrap/ipfs-plugin-js": "0.0.1-prealpha.88",
     "@polywrap/test-cases": "0.0.1-prealpha.88",
