--- a/packages/js/react/package.json
+++ b/packages/js/react/package.json
@@ -23,7 +23,7 @@
     "@polywrap/core-js": "0.0.1-prealpha.88"
   },
   "devDependencies": {
-    "@polywrap/ens-plugin-js": "0.0.1-prealpha.88",
+    "@polywrap/ens-resolver-plugin-js": "0.0.1-prealpha.88",
     "@polywrap/ethereum-plugin-js": "0.0.1-prealpha.88",
     "@polywrap/ipfs-plugin-js": "0.0.1-prealpha.88",
     "@polywrap/test-cases": "0.0.1-prealpha.88",
