--- a/packages/js/plugins/uri-resolvers/ipfs-resolver/polywrap.plugin.yaml
+++ b/packages/js/plugins/uri-resolvers/ipfs-resolver/polywrap.plugin.yaml
@@ -1,5 +1,5 @@
 format: 0.0.1-prealpha.3
-name: Ipfs
+name: IpfsResolver
 language: plugin/typescript
 module: ./src/index.ts
 schema: ./src/schema.graphql
